--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-server.port=18081
-spring.datasource.url=jdbc:mysql://192.168.2.77:3306/facelabel1?useSSL=false&useUnicode=true&characterEncoding=UTF-8
-spring.datasource.username=face
-spring.datasource.password=face
+server.port=8081
+spring.datasource.url=jdbc:mysql://192.168.191.128:3306/ihuanglimin?useSSL=false&useUnicode=true&characterEncoding=UTF-8
+spring.datasource.username=root
+spring.datasource.password=huang
 #spring.datasource.sql-script-encoding=
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 spring.jpa.hibernate.ddl-auto=update
