--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.jpa.show-sql=false
 spring.session.store-type=none
 security.basic.enabled=false
 spring.data.rest.detection-strategy=annotated
-spring.data.rest.base-path=/api/v1
+spring.data.rest.base-path=/api
 spring.http.multipart.max-file-size=1024MB
 ### fastdfs
 fdfs.soTimeout:1501
